# praxishub-connector

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.githooks/: pre-commit
.github/workflows/: build-sign.yml  ci.yml  sign-cli-smoke.yml  signing-smoke-test.yml
core/: Cargo.toml
core/src/: analysis.rs  cloud.rs  config.rs  crypto.rs  documents.rs  error.rs  heartbeat.rs  lib.rs  matching.rs  pa_lookup.ps1  paths.rs  patient_lookup.rs  status.rs
core/src/kim/: ebz.rs  mod.rs  pop3.rs  watcher.rs
core/src/vdds/: ini.rs  media.rs  mod.rs
core/src/z1db/: analysis.rs  archiv.rs  bootstrap.rs  client.rs  control.rs  hkp.rs  lookup.rs  mod.rs  patient_match.rs  writeback.rs
db/: README.md  make-local-dev-copy.ps1  z1-schema.sql
docs/: OPERATIONS.md  PVS-ARCHITEKTUR.md  SIGNING.md  Z1-BILLING.md  Z1-DATABASE.md  Z1-PILOT.md  Z1-SCHEMA.md  praxisarchiv-com-vtable.txt  praxisarchiv-com.md
scripts/: check-quotes.mjs
src/: main.ts  styles.css
src-tauri/: Cargo.toml  sign-wrap.ps1  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  elevate.rs  lib.rs  main.rs  state.rs  tray.rs
