[package]
name = "praxishub-connector-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "connector_core"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "net", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
native-tls = "0.2"
tokio-native-tls = "0.3"
encoding_rs = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
thiserror = "1"
anyhow = "1"
directories = "5"
base64 = "0.22"

[target.'cfg(windows)'.dependencies]
# DPAPI für Secret-Schutz at-rest (core/src/crypto.rs)
windows-sys = { version = "0.59", features = ["Win32_Security_Cryptography", "Win32_Foundation"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
