[package]
name = "praxishub-connector"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "On-Prem-Brücke zwischen Praxishub-Cloud und Praxis-PVS (VDDS-media + KIM/EBZ)."

[lib]
name = "praxishub_connector_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
praxishub-connector-core = { path = "../core" }
