[package]
name = "praxishub-connector"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "On-Prem-Brücke zwischen Praxishub-Cloud und Praxis-PVS (VDDS-media + KIM/EBZ)."

[lib]
name = "praxishub_connector_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
praxishub-connector-core = { path = "../core" }

# time 0.3.48 bricht unter rustc ≥1.96 (E0119: ein interner `From`-Impl kollidiert
# mit den Blanket-`From<T>`-Impls in tauri-utils/cookie). 0.3.47 ist die neueste
# Version ohne den Bug und erfüllt plists `^0.3.47`. Pin entfernen, sobald ein
# gefixtes time erscheint. (Transitiv genutzt; hier nur als Versions-Pin.)
time = "=0.3.47"
